# jux

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  dist-workspace.toml
.githooks/: pre-commit  pre-push
.github/workflows/: v-release.yml
crates/jux-cli/: Cargo.toml
crates/jux-cli/src/: main.rs
crates/jux-cli/src/tui/: app.rs  application.rs  events.rs  file_index.rs  mod.rs  runtime.rs  terminal.rs  ui.rs
crates/jux-cli/src/tui/ui/: component.rs  controller.rs  event.rs  focus.rs  layout.rs  mod.rs  state.rs  text.rs  theme.rs  virtual_list.rs
crates/jux-cli/src/tui/ui/components/: command_output.rs  conversation.rs  divider.rs  markdown.rs  mod.rs  sessions.rs  sidebar.rs
crates/jux-cli/tests/: cli.rs  test_main.rs  test_tui.rs  test_ui_architecture.rs
crates/jux-core/: Cargo.toml
crates/jux-core/assets/coreutils/: README.md
crates/jux-core/examples/: coreutils.rs
crates/jux-core/src/: distribution.rs  ids.rs  lib.rs  main_loop.rs  model.rs  orchestrator.rs  store.rs  tests.rs  update.rs  wasm_assets.rs  wasm_runtime.rs
crates/jux-core/src/code_change/: mod.rs
crates/jux-core/src/config/: mod.rs
crates/jux-core/src/instructions/: mod.rs
crates/jux-core/src/main_loop/: cancellation.rs  context.rs  event.rs  mod.rs
crates/jux-core/src/policy/: match_pattern.rs  mod.rs  native.rs
crates/jux-core/src/policy/wasm/: filesystem.rs  mod.rs  network.rs
crates/jux-core/src/skills/: mod.rs
crates/jux-core/src/state/: mod.rs  model.rs  store.rs
crates/jux-core/src/tools/: code_change.rs  human_input.rs  lua.rs  mod.rs
crates/jux-core/src/tools/wasm/: assets.rs  capability.rs  commands.rs  exec_tool.rs  mod.rs  permissions.rs  runtime.rs
crates/jux-core/src/util/: mod.rs  time.rs
crates/jux-core/src/wasm/: commands.rs  exec_tool.rs  mod.rs  runtime.rs  tests.rs
crates/jux-core/tests/: test_code_change.rs  test_config.rs  test_distribution.rs  test_ids.rs  test_instructions.rs  test_lib.rs  test_main_loop.rs  test_orchestrator.rs  test_policy.rs  test_skills.rs  test_store.rs  test_tools.rs  test_update.rs  test_wasm.rs
crates/jux-core/tests/tools/: test_wasm.rs
crates/jux-core/tests/tools/wasm/: test_permissions.rs  test_runtime.rs
crates/jux-core/tests/wasm/: test_commands.rs  test_permissions.rs  test_runtime.rs
docs/zh-CN/: README.md
scripts/: brand-dist-archive.ps1  brand-dist-archive.sh  brand-dist-npm-package.sh
