[workspace]
members = [
    "crates/jux-core",
    "crates/jux-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jux-project/jux"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive", "env"] }
jux-core = { path = "crates/jux-core" }
mlua = { version = "0.11.5", features = ["lua54", "vendored"] }
rig-core = "0.36.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.51.1", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "=1.18.1", features = ["v4"] }
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
predicates = "3.1.3"
futures = "0.3.32"
