[workspace]
members = [
    "crates/jux-core",
    "crates/jux-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jux-project/jux"
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive", "env"] }
crossterm = "0.28.1"
jux-core = { path = "crates/jux-core" }
mlua = { version = "0.11.5", features = ["lua54", "vendored"] }
rig-core = "0.36.0"
regex = "1.12.2"
ratatui = "0.29.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
shlex = "2.0.1"
tokio = { version = "1.51.1", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "=1.18.1", features = ["v4"] }
wasmer = "7.1.0"
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
predicates = "3.1.3"
futures = "0.3.32"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
wasmer-types = "7.1.0"
wasmer-package = "0.701.0"
wasmer-wasix = "0.701.0"
