[package]
name = "jux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jux"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
jux-core.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
