[package]
name = "jux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "jux"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
jux-core.workspace = true
notify.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
rig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-width.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
predicates.workspace = true
serde_json.workspace = true
