[package]
name = "jux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A secure, auditable, and extensible AI coding agent"
homepage = "https://github.com/jux-2026/jux"
readme = "../../README.md"
keywords = ["ai", "agent", "coding", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "jux_cli"
path = "src/lib.rs"

[[bin]]
name = "jux"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
jux-core.workspace = true
notify.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
rig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-width.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
predicates.workspace = true
serde_json.workspace = true
