[package]
name = "jux-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
futures.workspace = true
mlua.workspace = true
regex.workspace = true
rig-core.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
wasmer.workspace = true
wasmer-package.workspace = true
wasmer-types.workspace = true
wasmer-wasix.workspace = true

[dev-dependencies]
